--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,5 +11,8 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-
+  
+  <div class="comments">
+      {% include disqus.html disqus_identifier=page.disqus_identifier %}
+  </div>
 </article>
